# SignalFlow

./: AGENTS.md  CHANGELOG.md  README.md  eslint.config.mjs  package.json  pnpm-lock.yaml  vite.config.ts
.codex/: codex-os.manifest.json  verify.commands
.codex/actions/: bootstrap.sh  release-rehearsal.sh  verify.sh
.codex/bootstrap/: tests-docs.v1.json
.codex/prompts/: test-critic.md
.perf-baselines/: build-time.json  bundle.json
docs/: launch-contract.md  release-notes-v1.0.0.md  release-readiness.md
openapi/: openapi.generated.json
scripts/: clean-all-local.sh  clean-heavy.sh  lean-dev.sh
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: error.rs  lib.rs  state.rs  types.rs
src-tauri/src/commands/: execution.rs  flow.rs  node.rs  ollama.rs
src-tauri/src/db/: executions.rs  flows.rs  mod.rs  settings.rs
src-tauri/src/engine/: context.rs  executor.rs  graph.rs  value.rs
src-tauri/src/nodes/: mod.rs  registry.rs
src-tauri/src/nodes/ai/: llm_chat.rs  llm_prompt.rs  mod.rs
src-tauri/src/nodes/control/: code.rs  conditional.rs  for_each.rs  mod.rs  try_catch.rs
src-tauri/src/nodes/input/: file_read.rs  http_request.rs  mod.rs  number_input.rs  text_input.rs
src-tauri/src/nodes/output/: file_write.rs
src-tauri/src/nodes/transform/: filter.rs  json_parse.rs  map.rs  mod.rs  regex_node.rs  split.rs  text_template.rs
src-tauri/src/ollama/: mod.rs
src-tauri/src/sandbox/: evaluator.rs  mod.rs  runtime.rs
src-tauri/tests/: integration_database.rs  integration_file_io.rs  integration_http.rs  integration_ollama.rs
(+45 files in other folders)
