[package]
name = "signalflow"
version = "0.1.0"
description = "Visual dataflow programming desktop app"
authors = ["you"]
edition = "2021"

[lib]
name = "signalflow_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
thiserror = "2"
anyhow = "1"
async-trait = "0.1"
petgraph = "0.7"
regex = "1"
reqwest = { version = "0.12", features = ["rustls-tls", "json"], default-features = false }
rusqlite = { version = "0.32", features = ["bundled"] }
tauri-plugin-dialog = "2.6.0"
rquickjs = "0.5"
